--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,8 @@
     <properties>
         <revision>3.7.1</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
         <spring-boot.version>2.7.11</spring-boot.version>
         <maven-invoker-plugin.version>3.0.0</maven-invoker-plugin.version>
         <project.build.outputTimestamp>2020-09-27T15:10:43Z</project.build.outputTimestamp>
@@ -224,6 +224,14 @@
                 <artifactId>zt-zip</artifactId>
                 <version>1.14</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.sun</groupId>
+                <artifactId>tools</artifactId>
+                <version>1.8.0</version>
+                <scope>system</scope>
+                <systemPath>D:\tool\java\jdk1.8.0_73\lib\tools.jar</systemPath>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -241,7 +249,7 @@
                 <dependency>
                     <groupId>com.sun</groupId>
                     <artifactId>tools</artifactId>
-                    <version>1.6.0</version>
+                    <version>1.8.0</version>
                     <scope>system</scope>
                     <systemPath>${JAVA8_HOME}/lib/tools.jar</systemPath>
                 </dependency>
