arthas源码调试，增加本地调试技巧

--- a/debug-hzk/pom.xml
+++ b/debug-hzk/pom.xml
@@ -19,6 +19,12 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.taobao.arthas</groupId>
+            <artifactId>arthas-agent</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>bytekit-core</artifactId>
